Falso select (dropdown) en filtros

--- a/src/pug/components/filtros.pug
+++ b/src/pug/components/filtros.pug
@@ -8,6 +8,7 @@ mixin filtros(facturas)
                     {
                     name: 'mayormenor',
                     labelText: 'Ordenar por: ',
+                    placeholder: 'Mayor importe',
                     options: [
                         ['mayorImporte', 'Mayor importe'],
                         ['menorImporte', 'Menor importe'],
@@ -30,6 +31,7 @@ mixin filtros(facturas)
                     {
                         name: 'numPoliza',
                         labelText: 'No. de póliza',
+                        placeholder: 'Todas las pólizas',
                         options: [
                             ['totalPolizas', 'Todas las pólizas'],
                             ['num1', '75846843']
@@ -47,6 +49,7 @@ mixin filtros(facturas)
                     {
                         name: 'estadoRiesgo',
                         labelText: 'Estado',
+                        placeholder: 'Todos los estados',
                         options: [
                             ['totalEstados', 'Todos los estados'],
                             ['pendiente', 'Pendiente'],
