--- a/src/sass/components/filtros.scss
+++ b/src/sass/components/filtros.scss
@@ -23,11 +23,17 @@
         }
     }
     .opcionesTabla--selector {
-        display: flex;
-        flex-direction: row;
-        gap: 14px;
         @media (min-width: $tablet){
             order: 2;
+        }
+    }
+    #mayormenor {
+        flex-direction: row;
+        align-items: center;
+        gap: 14px;
+        span {
+            font-weight: 400;
+            margin-bottom: 0px;
         }
     }
     .opcionesTabla--abrirFiltros {
@@ -37,6 +43,7 @@
         padding: 12px 15px 12px 15px;
         background-color: $white;
         border-top: 1px solid $hr;
+        cursor: pointer;
         button {
             display: flex;
             flex-direction: row;
@@ -44,6 +51,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
+            cursor: pointer;
             font-family: $fontBold;
             @media (min-width: $tablet) {
                 font-family: $fontReg;
@@ -91,6 +99,11 @@
         color: $textLink;
         font-size: 16px;
     }
+    &--header {
+        button {
+            cursor: pointer;
+        }
+    }
     &--opciones {
        padding: 32px 40px; 
        display: flex;
@@ -98,11 +111,11 @@
        gap: 32px;
     }
 
-    .custom-select {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-    }
+    // .select_box {
+    //     display: flex;
+    //     flex-direction: column;
+    //     gap: 8px;
+    // }
 
     @media (min-width: $tablet) {
         width: 33%;
