--- a/src/sass/components/input_text.scss
+++ b/src/sass/components/input_text.scss
@@ -13,10 +13,10 @@
     color: $textLink !important;
 }
 .bloque__input{
-    border: 1px solid #E1E6EF;
-    border-radius: 8px;
+    border: 1px solid #A7B8BF;
+    border-radius: 4px;
     color: #1D2433CC;
-    padding: 8px 9px 8px 9px;
+    padding: 12px;
     background-color: $white;
     font-family: $fontReg;
     font-size: 16px;
