--- a/src/sass/fragments/selector.scss
+++ b/src/sass/fragments/selector.scss
@@ -1,59 +1,46 @@
-.custom-select {
-    label {
-      position: relative;
-      display: inline-block;
-        &:before {
-        content: '';
-        height: ($height - 5) + px;
-        position: absolute;
-        right: 7px;
-        top: 3px;
-        width: 22px;
-    
-        //background: -webkit-linear-gradient(#fff, #f0f0f0);
-        //background: -moz-linear-gradient(#fff, #f0f0f0);
-        //background: linear-gradient(#f5f5f5, #e0e0e0);
-        background: #fff; //for Firefox in Android
-    
-        border-top-right-radius: 3px;
-        border-bottom-right-radius: 3px;
-        pointer-events: none;
-        display: block;
-      }
-        &:after {
-        content: " ";
-        position: absolute;
-        right: 15px;
-        top: 46%;
-        margin-top: -3px;
-        z-index: 2;
-        pointer-events: none;
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 6.9px 4px 0 4px;
-        border-color: #aaa transparent transparent transparent;
-        pointer-events: none;
-      }
-    select {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        padding: 0 30px 0 10px;
-    
-        border: 1px solid #e0e0e0;
-        border-radius: 3px;
-        line-height: $height + px;
-        height: $height + px;
-        //box-shadow: inset 1px 1px 1px 0px rgba(0, 0, 0, 0.2);
-        background: #fff;
-    
-        //min-width: 200px;
-        margin: 0 5px 5px 0;
+.selector {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  span{
+    font-weight: 700;
+    color: $textLink;
+    margin-bottom: 8px;
+  }
+  .selector_box{
+    box-sizing: border-box;
+    border: 1px solid #A7B8BF;
+    border-radius: 4px;
+    padding: 12px;
+    background-color: $white;
+    position: relative;
+    color: $textLink;
+    img{
+      float: right;
+      padding-left: 10px;
+    }
+  }
+  .selector_box div {width: 100%;} //para que el hijo (dropdown) tenga el mismo width
+  &--dropdown{
+    max-height: 120px; //hacer scroll cuando hay más de 2/3 opciones aprox
+    overflow-y: auto;
+    box-sizing: border-box;
+    display: none;
+    position: absolute;
+    top: 45px;
+    left: 0px;
+    z-index: 10;
+    background-color: $white;
+    box-shadow: $shadow-card;
+    border-radius: 4px;
+    .selector_li {
+      padding: 12px;
+      &:hover {
+        background-color: $primary25;
       }
     }
-    //fix for ie 10 later
-    select::-ms-expand {
+    & hr:last-child {
       display: none;
     }
+  }
 }
