--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,6 +22,7 @@
 @import "fragments/tag.scss";
 @import "fragments/title_section.scss";
 @import "fragments/breadcrumbs.scss";
+@import "fragments/selector.scss";
 
 /** COMPONENTS **/
 @import "components/button.scss";
