--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,6 +23,7 @@
 @import "fragments/title_section.scss";
 @import "fragments/breadcrumbs.scss";
 @import "fragments/selector.scss";
+@import "fragments/date_input.scss";
 
 /** COMPONENTS **/
 @import "components/button.scss";
