--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,6 +24,7 @@
 @import "fragments/breadcrumbs.scss";
 @import "fragments/selector.scss";
 @import "fragments/date_input.scss";
+@import "fragments/chips.scss";
 
 /** COMPONENTS **/
 @import "components/button.scss";
