--- a/src/sass/components/filtros.scss
+++ b/src/sass/components/filtros.scss
@@ -1,41 +1,64 @@
 .opcionesTabla {
     display: flex;
-    .opcionesTabla--ordenar {
+    flex-direction: column;
+
+    &--chips {
+        display: flex;
+        flex-direction: row;
+        gap: 12px;
+        overflow-x: auto;
+        white-space: nowrap;
+        max-width: 100%;
+        margin: 36px 19px 24px 19px;
+
+        @media(min-width: $tablet) {
+            order: 2;
+            margin: 0px 19px;
+        }
+    }
+
+    &--ordenar {
         display: flex;
         flex-direction: column;
         gap: 24px;
-        margin: 36px 19px 24px 19px;
-    
-        @media (min-width: $tablet){
+        margin: 0px 19px 24px 19px;
+
+        @media (min-width: $tablet) {
             flex-direction: row;
             justify-content: space-between;
+            align-items: center;
             order: 2;
             margin: 0px;
         }
+
         .numFacturas {
-            font-family: $fontBold;
             @media (min-width: $tablet) {
                 order: 1;
             }
         }
+
         p {
             color: $textLink;
         }
     }
+
     .opcionesTabla--selector {
-        @media (min-width: $tablet){
-            order: 2;
+        @media (min-width: $tablet) {
+            order: 3;
         }
     }
+
     #mayormenor {
         flex-direction: row;
         align-items: center;
         gap: 14px;
+
         span {
             font-weight: 400;
             margin-bottom: 0px;
         }
     }
+
     .opcionesTabla--abrirFiltros {
         position: fixed;
         bottom: 0px;
@@ -44,6 +67,7 @@
         background-color: $white;
         border-top: 1px solid $hr;
         cursor: pointer;
+
         button {
             display: flex;
             flex-direction: row;
@@ -53,10 +77,12 @@
             width: 100%;
             cursor: pointer;
             font-family: $fontBold;
+
             @media (min-width: $tablet) {
                 font-family: $fontReg;
             }
         }
+
         @media (min-width: $tablet) {
             position: relative;
             order: 1;
@@ -66,11 +92,52 @@
             border-radius: 8px;
             height: fit-content;
             box-sizing: border-box;
+
             &:hover {
                 background-color: $primary25;
             }
         }
     }
+
+    &--facturas {
+        font-family: $fontBold;
+
+        button {
+            color: $primary;
+            padding: 0px;
+            margin-top: 16px;
+            clear: left;
+            cursor: pointer;
+
+            @media (min-width: $tablet) {
+                margin-left: 16px;
+                clear: none;
+                margin-top: 0;
+            }
+        }
+    }
+
+    &--facturas>* {
+        float: left;
+
+    }
+
+    &--facturas p:nth-child(1):after {
+        content: '|';
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+
+    &--filtros {
+        display: flex;
+
+        @media (min-width: $tablet) {
+            flex-direction: row;
+            align-items: center;
+            height: fit-content;
+        }
+    }
+
     @media (min-width: $tablet) {
         flex-direction: column;
         margin: 40px 24px 40px 24px;
@@ -78,14 +145,15 @@
     }
 }
 
-.menuFiltros{
-    display: block;
+.menuFiltros {
+    display: none;
     background-color: $white;
     position: fixed;
     top: 0px;
     overflow: auto;
     width: 100%;
     height: 100%;
+
     &--header {
         display: flex;
         flex-direction: row;
@@ -94,34 +162,39 @@
         padding: 24px 40px;
         font-weight: 700;
     }
+
     label {
         font-weight: 700;
         color: $textLink;
         font-size: 16px;
     }
+
     &--header {
         button {
             cursor: pointer;
         }
     }
+
     &--opciones {
-       padding: 32px 40px; 
-       display: flex;
-       flex-direction: column;
-       gap: 32px;
+        padding: 32px 40px;
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
     }
 
-    // .select_box {
-    //     display: flex;
-    //     flex-direction: column;
-    //     gap: 8px;
-    // }
+    .container_checkboxAnio,
+    .container_checkboxComunidad {
+        p {
+            margin-bottom: 8px;
+        }
+    }
 
     @media (min-width: $tablet) {
         width: 33%;
-        box-shadow:0 0 0 10000px rgba(0,0,0,.50);
+        box-shadow: 0 0 0 10000px rgba(0, 0, 0, .50);
     }
 }
+
 .show {
     display: flex !important;
     flex-direction: column;
@@ -132,6 +205,7 @@
     from {
         transform: translateX(-100%);
     }
+
     to {
         transform: translateX(0);
     }
@@ -139,8 +213,9 @@
 
 @keyframes slideOutFiltros {
     from {
-        transform: translateX(0); 
+        transform: translateX(0);
     }
+
     to {
         transform: translateX(-100%);
     }
