--- a/src/sass/fragments/chips.scss
+++ b/src/sass/fragments/chips.scss
@@ -24,6 +24,7 @@
     }
     &--cerrar {
         padding-left: 6px ;
+        cursor: pointer;
     }
     // &--fondo {
     //     background-color: $white;
