--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,6 +25,7 @@
 @import "fragments/selector.scss";
 @import "fragments/date_input.scss";
 @import "fragments/chips.scss";
+@import "fragments/paginador.scss";
 
 /** COMPONENTS **/
 @import "components/button.scss";
