--- a/src/sass/fragments/chips.scss
+++ b/src/sass/fragments/chips.scss
@@ -26,10 +26,8 @@
         padding-left: 6px ;
         cursor: pointer;
     }
-    // &--fondo {
-    //     background-color: $white;
-    //     text-align: center;
-    //     border-radius: 50%;
-    //     padding-right: 8px;
-    // }
+
+    button {
+        padding: 0;
+    }
 }
