--- a/src/sass/fragments/paginador.scss
+++ b/src/sass/fragments/paginador.scss
@@ -1,40 +1,50 @@
 .paginador {
-    display: none;
-    @media (min-width: $tablet){
-        margin: 20px 24px 80px 24px;
-        display: block;
-        display: flex; //ojito
-        align-items: center;
-        gap: 32px;
-        float: right;
-        &--arrows {
-            display: flex;
-            gap: 8px;
-            
-        }
-        &--arrow {
-            cursor: pointer;
-            padding: 12px;
-            border-radius: 8px;
-            background-color: $white;
-            box-shadow: $shadow-card;
-        }
-        #filasPagina {
-            flex-direction: row;
-            gap: 12px;
-            align-items: center;
-            span {
-                margin-bottom: 0px;
-            }
-            
-        }
-        span {
-            font-weight: 700;
-            color: $textLink;
+    margin: 20px 24px 80px 24px;
+    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+
+    &--arrows {
+        display: flex;
+        gap: 8px;
+        order: 2;
+        @media (min-width: $tablet) {
+            order: 3;
         }
     }
-}
 
-.paginador > * {
-    float: left;
+    &--arrow {
+        cursor: pointer;
+        padding: 12px;
+        border-radius: 8px;
+        background-color: $white;
+        box-shadow: $shadow-card;
+    }
+
+    #filasPagina {
+        flex-direction: row;
+        gap: 12px;
+        align-items: center;
+        order: 1;
+        span {
+            margin-bottom: 0px;
+        }
+    }
+
+    &--paginas {
+        order: 3;
+        font-weight: 700;
+        color: $textLink;
+        @media (min-width: $tablet) {
+            order: 2;
+        }
+    }
+
+
+    @media (min-width: $tablet) {
+        float: right;
+        flex-direction: row;
+    }
 }
